--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <title>Portal Impulso Empresarial de las Illes Balears</title>
   <base href="/">
+  <meta name="description" content="Portal para el impulso empresarial de las Islas Baleares">
+  <meta name="keywords" content="empresa, autónomo, economía social, servicio público empresarial">
+  <meta name="author" content="Institut d'Innovació Empresarial de les Illes Balears (IDI)">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
